--- a/Dropdowns/Views/Shared/_Layout.cshtml
+++ b/Dropdowns/Views/Shared/_Layout.cshtml
@@ -1,11 +1,15 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    @RenderBody()
+    <div class="container-fluid">
+        @RenderBody()
+    </div>    
 </body>
 </html>
