Testing default value selection mechanism for DropDownListFor

--- a/Dropdowns/Views/SignUp/SignUp.cshtml
+++ b/Dropdowns/Views/SignUp/SignUp.cshtml
@@ -25,7 +25,7 @@
                                                             // take selected value from Model.State.
 
                                               // 2. Take list of values from Model.States
-                                              Model.States,
+                                              new SelectList(Model.States, "Queensland"),
 
                                               // 3. Text for the first 'default' option
                                               "- Please select a state -",
